feat: 添加ai助手相关接口
